tests/baselines/reference/primitiveTypeAsInterfaceNameGeneric.errors.txt
==== tests/cases/compiler/primitiveTypeAsInterfaceNameGeneric.ts (2 errors) ====
    interface number<T> {}
              ~~~~~~
!!! error TS1058: Interface name cannot be 'number'.
              ~~~~~~
!!! error TS2000: Duplicate identifier 'number'.